constraints/pod-security-policy-privileged-containers-samples-psp-privileged-container-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata: # kpt-merge: /psp-privileged-container
  name: psp-privileged-container-sample
spec:
  enforcementAction: warn
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
